fix: wrong color on login menu

--- a/packages/react/src/components/header/components/headerActionBarItem/HeaderActionBarItem.module.scss
+++ b/packages/react/src/components/header/components/headerActionBarItem/HeaderActionBarItem.module.scss
@@ -79,7 +79,6 @@
 
   & > h3 {
     box-sizing: border-box;
-    color: #f00;
     font-size: var(--fontsize-heading-xs);
     font-weight: bold;
     line-height: 28px;
